--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.1",
     "core-js": "^2.4.1",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.5.6",
     "ui-carousel": "^0.2.0",
     "zone.js": "^0.8.19"
