--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "dev": "concurrently --kill-others-on-fail \"nodemon server/server-worker.js\" \"ng build --watch\"",
+    "dev": "concurrently --kill-others-on-fail  \"ng build --watch\" \"nodemon server/server-worker.js\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "ngx-cookie-service": "^1.0.10",
+    "request": "^2.85.0",
     "rxjs": "^5.5.6",
     "ui-carousel": "^0.2.0",
     "zone.js": "^0.8.19"
